--- a/model/model-home/src/main/AndroidManifest.xml
+++ b/model/model-home/src/main/AndroidManifest.xml
@@ -17,8 +17,7 @@
             android:exported="false" />
         <activity
             android:name=".HomeMainActivity"
-            android:exported="false"
-            android:theme="@style/CommonTheme.TransparentBar" />
+            android:exported="false" />
     </application>
 
 </manifest>
