--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     //主题包
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation Google.material
     //公共基础包
     implementation project(":library:lib-common")
 
@@ -92,7 +92,6 @@ dependencies {
     //用于设置主题
     implementation AndroidX.appcompat
     implementation project(path: ':library:lib-file')
-    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     if (!isRunModel.toBoolean()) {
         implementation project(":model:model-splash")
