--- a/model/model-splash/build.gradle
+++ b/model/model-splash/build.gradle
@@ -22,7 +22,7 @@ android {
 dependencies {
     implementation AndroidX.coreKtx
     implementation AndroidX.appcompat
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation Google.material
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
     //KTX
