--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation project(":library:lib-common")
     implementation project(":library:lib-updata")
 
+    implementation 'com.google.auto.service:auto-service:1.0.1'
+
     //用于设置主题
     implementation AndroidX.appcompat
     implementation project(path: ':library:lib-file')
