--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'com.wangkai.version'
+    id 'kotlin-android'
+    id'kotlin-kapt'
 }
 
 android {
@@ -83,7 +85,10 @@ dependencies {
     implementation project(":library:lib-common")
     implementation project(":library:lib-updata")
 
-    implementation 'com.google.auto.service:auto-service:1.0.1'
+    //ACRA needs the following dependencies to use a custom report sender
+    compileOnly("com.google.auto.service:auto-service-annotations:1.0.1")
+    //or for kotlin sources (requires kapt gradle plugin):
+    kapt("com.google.auto.service:auto-service:1.0.1")
 
     //用于设置主题
     implementation AndroidX.appcompat
