--- a/settings.gradle
+++ b/settings.gradle
@@ -11,6 +11,9 @@ pluginManagement {
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven {
+            url "https://androidx.dev/storage/compose-compiler/repository/"
+        }
     }
 }
 dependencyResolutionManagement {
@@ -26,6 +29,9 @@ dependencyResolutionManagement {
         maven { url 'https://maven.aliyun.com/repository/central' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        maven {
+            url "https://androidx.dev/storage/compose-compiler/repository/"
+        }
         flatDir {
             dirs 'libs'
         }
