--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     dependencies {
         // 因为使用的 Kotlin 需要需要添加 Kotlin 插件
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20-RC'
+//        classpath "com.android.tools.build:gradle:7.2.2"
     }
 }
 plugins {
