--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -12,6 +12,13 @@ String getModelType() {
 }
 
 android {
+    compileSdk 33
+    defaultConfig {
+        minSdk 21
+        targetSdk 33
+        versionCode 2
+        versionName "1.0"
+    }
     /*构建类型*/
     buildTypes {
         release {
