--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -74,4 +74,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-v4'
     }
     kapt 'com.alibaba:arouter-compiler:1.5.2'    //ARouter路由compiler
+
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:latest.release'
+    implementation 'com.google.android.material:material:latest.release'
+
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+
+    //KTX
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-service:2.4.1'
 }
