--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -54,9 +54,24 @@ android {
         targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
+        // 构建指定 jvm 版本
         jvmTarget = '11'
     }
 
+    composeOptions {
+        // Compose 是 Kotlin 开发的，需要配置 Kotlin 对应的编译扩展版本
+        kotlinCompilerExtensionVersion '1.4.0-dev-k1.7.20-e49b3b6028b'
+    }
+    packagingOptions {
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
+    }
+    defaultConfig {
+        vectorDrawables {
+            useSupportLibrary true
+        }
+    }
     viewBinding {
         enabled = true
     }
@@ -92,4 +107,35 @@ dependencies {
     implementation project(":library:lib-widget")
     //公共基础包
     implementation project(":library:lib-common")
+
+
+    //-------------------------------------jetpack compose开始---------------------------------------
+    implementation 'androidx.compose.ui:ui:1.2.1'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.2.1'
+    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation 'androidx.compose.foundation:foundation:1.2.1'
+    // Material Design
+    implementation 'androidx.compose.material:material:1.2.1'
+    // Material design icons
+    implementation 'androidx.compose.material:material-icons-core:1.2.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.2.1'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.5.1'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    // Integration with observables
+    implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
+    implementation 'androidx.compose.runtime:runtime-rxjava2:1.2.1'
+    // UI Tests
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
+
+    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+
+    // When using a MDC theme
+    implementation "com.google.android.material:compose-theme-adapter:1.1.16"
+    // When using a AppCompat theme
+    implementation "com.google.accompanist:accompanist-appcompat-theme:0.25.1"
+    //-------------------------------------jetpack compose结束---------------------------------------
 }
