--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.wangkai.myapplication">
+    xmlns:tools="http://schemas.android.com/tools">
     <!-- app权限在这里申请 -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 开启网络访问权限 -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- 允许访问网络状态的权限 -->
