--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.wangkai.version'
     id 'kotlin-android'
-    id'kotlin-kapt'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -84,6 +84,12 @@ dependencies {
     //公共基础包
     implementation project(":library:lib-common")
     implementation project(":library:lib-updata")
+
+
+    def acraVersion = '5.9.6'
+    implementation "ch.acra:acra-http:$acraVersion"
+    implementation "ch.acra:acra-mail:$acraVersion"
+    implementation "ch.acra:acra-core:$acraVersion"
 
     //ACRA needs the following dependencies to use a custom report sender
     compileOnly("com.google.auto.service:auto-service-annotations:1.0.1")
