--- a/app-model-build.gradle
+++ b/app-model-build.gradle
@@ -111,28 +111,24 @@ dependencies {
 
     //-------------------------------------jetpack compose开始---------------------------------------
     implementation 'androidx.compose.ui:ui:1.2.1'
-    // Tooling support (Previews, etc.)
+    // UI工具包
     implementation 'androidx.compose.ui:ui-tooling:1.2.1'
-    // Foundation (Border, Background, Box, Image, Scroll, shapes, animations, etc.)
+    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
+    // 基础（边框、背景、框图片、滚动、形状、动画等）
     implementation 'androidx.compose.foundation:foundation:1.2.1'
     // Material Design
     implementation 'androidx.compose.material:material:1.2.1'
     // Material design icons
     implementation 'androidx.compose.material:material-icons-core:1.2.1'
     implementation 'androidx.compose.material:material-icons-extended:1.2.1'
-    // Integration with activities
+    // Integration with activities 与activity结合使用
     implementation 'androidx.activity:activity-compose:1.5.1'
-    // Integration with ViewModels
+    // Integration with ViewModels 与viewModel结合使用
     implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
-    // Integration with observables
+    // Integration with observables 与livedata结合使用
     implementation 'androidx.compose.runtime:runtime-livedata:1.2.1'
-    implementation 'androidx.compose.runtime:runtime-rxjava2:1.2.1'
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.2.1'
-
-    debugImplementation "androidx.compose.ui:ui-tooling:1.2.1"
-    implementation "androidx.compose.ui:ui-tooling-preview:1.2.1"
-
     // When using a MDC theme
     implementation "com.google.android.material:compose-theme-adapter:1.1.16"
     // When using a AppCompat theme
