--- a/settings.gradle
+++ b/settings.gradle
@@ -57,6 +57,7 @@ include ':model:model-home'//首页
 include ':model:model-login'//登录页
 include ':model:model-kotlin'//kotlin示例
 include ':model:model-airpods'//airpods弹窗模块
-include ':model:model-center'
+include ':model:model-center'//个人中心
+include ':model:model-compose'//compose示例
 //依赖管理
 includeBuild("versionPlugin")
