--- a/model/model-airpods/src/main/alone/AndroidManifest.xml
+++ b/model/model-airpods/src/main/alone/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.model.airpods">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/airpods_ic_launcher"
         android:label="@string/airpods_app_name"
         android:roundIcon="@mipmap/airpods_ic_launcher_round"
