--- a/model/model-compose/src/main/AndroidManifest.xml
+++ b/model/model-compose/src/main/AndroidManifest.xml
@@ -1,13 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <application
-        android:allowBackup="true"
-        android:icon="@mipmap/compose_ic_launcher"
-        android:label="@string/compose_app_name"
-        android:roundIcon="@mipmap/compose_ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Compose_Theme.MyApplication">
+    <application>
         <activity
             android:name=".MainActivity"
             android:exported="true">
