--- a/model/model-compose/src/main/alone/AndroidManifest.xml
+++ b/model/model-compose/src/main/alone/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:name="com.library.base.application.DebugApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/compose_ic_launcher"
         android:label="@string/compose_app_name"
         android:roundIcon="@mipmap/compose_ic_launcher_round"
