--- a/model/model-login/src/main/alone/AndroidManifest.xml
+++ b/model/model-login/src/main/alone/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
     <application
         android:name="com.library.base.application.DebugApplication"
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/login_ic_launcher"
         android:label="@string/login_app_name"
         android:roundIcon="@mipmap/login_ic_launcher_round"
