--- a/model/model-splash/src/main/alone/AndroidManifest.xml
+++ b/model/model-splash/src/main/alone/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.model.splash">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/splash_ic_launcher"
         android:label="@string/splash_app_name"
         android:roundIcon="@mipmap/splash_ic_launcher_round"
