--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,11 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> <!-- SD卡写入权限 -->
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" /> <!--允许安装来自未知来源-->
 
+    <queries>
+        <package android:name="com.wangkai.myapplication" />
+        <package android:name="com.wangkai.upload.utils" />
+    </queries>
+
     <application
         android:name=".MainApplication"
         android:allowBackup="false"
@@ -18,6 +23,7 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/app_ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/app_network_security_config"
         android:roundIcon="@mipmap/app_ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/APPTheme.BaseApplication"
