--- a/model/model-center/build.gradle
+++ b/model/model-center/build.gradle
@@ -9,3 +9,9 @@ android {
     //统一资源前缀，规范资源引用
     resourcePrefix "center_"
 }
+dependencies {
+    implementation "androidx.room:room-runtime:2.4.3"
+    annotationProcessor "androidx.room:room-compiler:2.4.3"
+    kapt "androidx.room:room-compiler:2.4.3"
+    implementation("androidx.room:room-ktx:2.4.3")
+}
